<resources>
    <string name="app_name">Reporte ciudadano</string>
    <string name="name">Nombre completo</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="repeat_password">Repita la contraseña</string>
    <string name="recover_password">¿Olvidaste tu contraseña?</string>
    <string name="login">Iniciar sesión</string>
    <string name="signup">Registrarme</string>
    <string name="create_new_account">Crear una cuenta nueva</string>
    <string name="already_have_an_account">Ya tengo una cuenta</string>
    <string name="watch_more">Ver completo</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="report_title">Titulo del reporte</string>
    <string name="description">Descripción</string>
    <string name="add_picture">Agregar una foto</string>
    <string name="location">Ubicación</string>
    <string name="create">Crear</string>
    <string name="choose_image_option">¿Cómo deseas subir la foto?</string>
    <string name="use_camera">Tomar una foto</string>
    <string name="use_gallery">Seleccionar de la galería</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>